force-app/main/default/objects/Contract/fields/NF_ARE_Subscription_Present__c.field-meta.xml
<CustomField>
    <fullName>NF_ARE_Subscription_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ARE Subscription Present</label>
    <type>Checkbox</type>
</CustomField>