force-app/main/default/objects/Contract/fields/NF_Number_of_Active_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>NF_Number_of_Active_Subscriptions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Active Subscriptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>