force-app/main/default/objects/Contract/fields/NF_Renewal_Uplift_Rate__c.field-meta.xml
<CustomField>
    <fullName>NF_Renewal_Uplift_Rate__c</fullName>
    <label>Renewal Uplift Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>